--- a/challenge-1/Profile-Card/style.css
+++ b/challenge-1/Profile-Card/style.css
@@ -12,16 +12,16 @@ body{
 
 
 .card{
-    background-color: cornflowerblue;
+    background-color: white;
     height: 460px;
     width: 320px;
     border-radius: 40px;
-    /* box-shadow: 0px 2px 20px 2px black; */
+    box-shadow: -2px 10px 23px -10px black;
 }
 
 
 
-.card-head{
+.card-head {
     height: 35%;
     width: 100%;
     /* border:  1px solid black;/ */
@@ -82,11 +82,99 @@ body{
     border-bottom-right-radius: 40px;
     width: 100%;
     height: 65%;
-    background-color: aquamarine;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    overflow: hidden;
 }
 
 .card-title{
     width: 100%;
     height: auto;
-    background-color: brown;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3px;
+}
+
+.card-title > h2{
+    font-family: sans-serif;
+}
+.card-title > p{
+    font-family: sans-serif;
+    font-size: 14px;
+}
+
+
+.card-icons{
+    width: 100%;
+    height: auto;
+    display: flex ;
+    justify-content: center;
+    align-items: center;
+    gap: 27px;
+}
+
+
+.card-icons svg{
+    cursor: pointer;
+}
+
+
+.card-desc{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: justify;
+}
+
+.card-desc p {
+    width: 90%;
+    font-family: sans-serif;
+    font-size: 14px;
+    line-height: 25px;
+}
+
+
+.card-btns{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.card-btns  > button{
+
+    cursor: pointer;
+    padding: 11px 37px ;
+    border-radius: 30px;
+    background-color: white;
+    border: 1px solid gray;
+    font-weight: 600;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: grey;
+        box-shadow: 3px 4px 0px 1px black ;
+
+}
+
+
+.card-btns  > button:active{
+    box-shadow: none;
+    animation: all 2s;
+    transform: translateX(3px);
+    transform: translateY(4px);
+}
+.card-btns button:nth-child(1){
+    border: none;
+    background-color: #DF408B;
+    color: white;
+   
 }
